--- a/HotelApp3/appsettings.json
+++ b/HotelApp3/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "HotelAppDb": "Server=localhost;Database=HotelAppDb;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
+    "HotelAppDb": "Server=localhost;Database=DannesHotelAppDb;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
